<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/redo_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FF6C40"
        android:text="@string/redo_yes"
        android:textColor="#673AB7"
        app:layout_constraintEnd_toEndOf="@+id/redo_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/redo_text"
        app:layout_constraintTop_toBottomOf="@+id/redo_text" />

    <Button
        android:id="@+id/redo_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FF6C40"
        android:text="@string/redo_no"
        android:textColor="#673AB7"
        app:layout_constraintEnd_toEndOf="@+id/redo_text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/redo_text"
        app:layout_constraintTop_toBottomOf="@+id/redo_text" />

    <TextView
        android:id="@+id/redo_text"
        android:layout_width="233dp"
        android:layout_height="58dp"
        android:text="@string/redo_question"
        android:textAlignment="center"
        android:textColor="#673AB7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/redo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redo_titleText"
        android:textColor="#FF5722"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/redo_text"
        app:layout_constraintEnd_toEndOf="@+id/redo_text"
        app:layout_constraintStart_toStartOf="@+id/redo_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932" />
</androidx.constraintlayout.widget.ConstraintLayout>