<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#9E4E1C">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:scaleX="3"
        android:scaleY="3"
        android:translationX="190sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273"
        app:srcCompat="@drawable/rough_beige_paper_texture" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/colonnemarroni"
        android:fontFamily="@font/ammaanneysecondcoming"
        android:hint="@string/userNameString"
        android:scrollbarSize="4dp"
        android:textAlignment="center"
        android:textColor="#975F6D"
        android:textColorHint="#80975F6D"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/loginTitle"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/loginTitle"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/colonnemarroni"
        android:fontFamily="@font/ammaanneysecondcoming"
        android:hint="@string/passHint"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#975F6D"
        android:textColorHint="#80965F6D"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="177dp"
        android:layout_height="84dp"
        android:fontFamily="@font/amperzandseconcoming"
        android:text="@string/loginTitle"
        android:textAlignment="center"
        android:textColor="#4F83A8"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="290dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.004">

        <TextView
            android:id="@+id/forgottenPsw_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ammaanneysecondcoming"
            android:text="Password dimenticata?"
            android:textAlignment="center"
            android:textColor="#4F83A8"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/registerNow_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ammaanneysecondcoming"
            android:text="Registrati ora!"
            android:textAlignment="center"
            android:textColor="#42AAF5"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/colonnebottone"
        android:fontFamily="@font/ammaanneysecondcoming"
        android:text="@string/loginButtonString"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/pass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pass"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="129dp"
        android:layout_height="187dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/zampa" />

</androidx.constraintlayout.widget.ConstraintLayout>